# LeGO-LOAM

LeGO-LOAM/: CMakeLists.txt
LeGO-LOAM/include/: utility.h
LeGO-LOAM/launch/: run.launch  test.rviz
LeGO-LOAM/src/: featureAssociation.cpp  feature_extraction.h  imageProjection.cpp  image_projection.h  lidar_mapping.h  local_map.h  location_map.cpp  location_map_test.cpp  mapOptmization.cpp  mapOptmization_gtest.cpp  point_cloud.h  scan_match.h  trajector.h  transformFusion.cpp
